Skeletal structure complete

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,7 +10,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="10"
-            tools:context="com.android.incidentapp.MainActivity">
+            tools:context="com.android.incidentapp.SignInActivity">
 
             <RelativeLayout
                 android:layout_width="match_parent"
