--- a/app/src/main/res/layout/actionbar_home.xml
+++ b/app/src/main/res/layout/actionbar_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:layout_gravity="right"
-    android:background="@android:color/transparent"
+    android:background="#FF9933"
     android:gravity="center_vertical"
     android:padding="@dimen/activity_vertical_margin">
 
@@ -13,31 +13,14 @@
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="Incident-17"
             android:textColor="#FFFFFF"
             android:textSize="22sp"
+            android:gravity="center"
             android:fontFamily="sans-serif" />
-
-        <ImageButton
-            android:id="@+id/ib_share"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|right"
-            android:layout_toLeftOf="@+id/ib_flag"
-            android:background="@android:color/transparent"
-            android:paddingRight="@dimen/activity_vertical_margin"
-            android:src="@mipmap/ic_notifications_none_24" />
-
-        <ImageButton
-            android:id="@+id/ib_flag"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:background="@android:color/transparent"
-            android:src="@mipmap/ic_more_vert_white_24dp" />
     </RelativeLayout>
 
 </LinearLayout>
