--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,102 +1,82 @@
 <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#484848"
     android:gravity="bottom"
-    sothree:umanoPanelHeight="56dp"
-    sothree:umanoShadowHeight="4dp"
-    sothree:umanoParallaxOffset="100dp"
     sothree:umanoDragView="@+id/dragView"
     sothree:umanoOverlay="true"
-    sothree:umanoScrollableView="@+id/rv_quiz">
+    sothree:umanoPanelHeight="56dp"
+    sothree:umanoParallaxOffset="100dp"
+    sothree:umanoScrollableView="@+id/rv_quiz"
+    sothree:umanoShadowHeight="4dp">
     <!-- MAIN CONTENT -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/ll_1"
+        <include
+            android:id="@+id/include_acb_home"
+            layout="@layout/actionbar_home"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:orientation="horizontal"
-            android:background="#FF9933">
+            android:layout_height="?attr/actionBarSize"></include>
 
-            <include
-                android:id="@+id/include_acb_home"
-                layout="@layout/actionbar_home"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"></include>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <com.android.incidentapp.auxiliary.BottomFadeEdgeRV
+            android:id="@+id/rv_leaderboard"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_below="@+id/ll_1"
-            android:orientation="vertical"
-            android:paddingTop="65dp"
-            android:background="#FFFFFF">
+            android:layout_height="match_parent"
+            android:background="#484848"
+            android:requiresFadingEdge="vertical"
+            android:fadingEdgeLength="300dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Guest_"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:gravity="center_horizontal"
-                android:textColor="#000000"
-                android:alpha="0.87"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="234 points"
-                android:gravity="center_horizontal"
-                android:textSize="18sp"
-                android:textColor="#000000"
-                android:alpha="0.67"/>
+        <!--<LinearLayout-->
+        <!--android:layout_width="120dp"-->
+        <!--android:layout_height="120dp"-->
+        <!--android:background="@drawable/bk_rank"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_below="@+id/divider_2"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:gravity="center">-->
 
-        </LinearLayout>
+        <!--<View-->
+        <!--android:layout_width="90dp"-->
+        <!--android:layout_height="90dp"-->
+        <!--android:background="@drawable/bk_ranktext" />-->
 
-        <com.android.incidentapp.auxiliary.CircularImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_profile_48_white"
-            android:layout_centerInParent="true"
-            app:border_color="#252525"
-            app:border_overlay="false"
-            app:border_width="2dp" />
+        <!--</LinearLayout>-->
 
-    </RelativeLayout>
-    <!-- SLIDING LAYOUT -->
+    </RelativeLayout><!-- SLIDING LAYOUT -->
     <LinearLayout
+        android:id="@+id/dragView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#404040"
-        android:orientation="vertical"
         android:clickable="true"
         android:focusable="false"
-        android:id="@+id/dragView">
+        android:background="#484848"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:gravity="center_vertical"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:gravity="center_vertical">
+            android:background="#FF9933"
+            android:paddingRight="16dp">
 
             <TextView
                 android:id="@+id/tv_quiz"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="4dp"
                 android:text="Quiz"
                 android:textColor="#FFFFFF"
                 android:textSize="22sp"
-                android:paddingBottom="4dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tv_quiz_update"
                 android:layout_width="match_parent"
@@ -104,17 +84,17 @@
                 android:layout_below="@+id/tv_quiz"
                 android:text="One new question added."
                 android:textColor="#FFFFFF"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/tv_quiz"
                 android:layout_alignBottom="@+id/tv_quiz_update"
-                android:background="@android:color/transparent"
-                android:src="@mipmap/ic_keyboard_arrow_up_white_24dp"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
+                android:layout_alignTop="@+id/tv_quiz"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:src="@mipmap/ic_keyboard_arrow_up_white_24dp" />
 
         </RelativeLayout>
 
@@ -122,8 +102,7 @@
             android:id="@+id/rv_quiz"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_weight="1"></android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
