--- a/app/src/main/res/layout/activity_spin.xml
+++ b/app/src/main/res/layout/activity_spin.xml
@@ -11,6 +11,11 @@
         android:id="@+id/imageView_ring"
         android:scaleType="matrix"
         android:layout_height="250dp"
-
         android:layout_width="250dp"></ImageView>
+    <Button
+        android:id="@+id/b_rotate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="ROTATE" />
 </LinearLayout>
